Внёс изменения, для проверки ветки

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Репозитарий</title>
 </head>
 <body>
+    <header>
+        <h1>Это шапка</h1>
+    </header>
     <h1>Hello World!</h1>
     <p>И привет GitHab</p>
 </body>
