Создание подвала сайта!

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     </header>
     <h1>Hello World!</h1>
     <p>И привет GitHab</p>
+    <footer>
+        <h1>Это подвал сайта</h1>
+    </footer>
 </body>
 </html>
